--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,6 @@
 
   <div th:fragment="header">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <div class="container-fluid">
     <div class="row my-3 align-items-center">
       <!-- 햄버거 + 로고를 같은 flex 컨테이너에 넣음 -->
