--- a/src/main/resources/templates/views/board/board.html
+++ b/src/main/resources/templates/views/board/board.html
@@ -81,15 +81,22 @@
        		 		<a class="btn btn-outline-secondary light-gray-btn" th:href="@{/board(category=4)}">처음으로</a>
        		 	</div>
        		 	<div class ="col-6 d-flex justify-content-end">
-       		 			<a class="btn btn-outline-secondary light-gray-btn" th:href = "@{|writeBoard?category=${category}&hashtag=${hashtag}|}">글 쓰기</a>
-       		 	</div>
+				<a class="btn btn-outline-secondary light-gray-btn" th:href="@{/writeBoard(category=${category}&hashtag=${hashtag}, redirectUrl='/board?category=' + ${category})}">
+					   글 쓰기
+					</a> 
+					</div>
        		 </div>
        		</th:block>
         		<!-- 해시태그 아닐때 버튼  --> 
        		<th:block th:if="${! isHashtagBoard and bList != null and !#lists.isEmpty(bList)}">
        		 <div class ="row my-3">
        		 	<div class ="col d-flex justify-content-end">
-       		 		<a class="btn btn-outline-secondary light-gray-btn" th:href = "@{|writeBoard?category=${category}|}">글 쓰기</a>
+       		 		<!--  <a class="btn btn-outline-secondary light-gray-btn" th:href="@{|writeBoard?category=${category}|}">글 쓰기</a>-->
+       		 		<!-- 글쓰기 버튼 주소 수정(로그인폼으로 갈때 내가 어디서 왔는지 알림 -->
+					<a class="btn btn-outline-secondary light-gray-btn" 
+					   th:href="@{/writeBoard(category=${category}, redirectUrl='/board?category=' + ${category})}">
+					   글 쓰기
+					</a>
        		 	</div>
        		 </div>
        		</th:block>
