--- a/src/main/resources/templates/views/board/writeBoard.html
+++ b/src/main/resources/templates/views/board/writeBoard.html
@@ -5,7 +5,7 @@
 <head>
 <meta charset="UTF-8">
 <title>게시판 글 쓰기</title>
-<link rel="stylesheet" th:href="@{/css/userForm.css}" />
+<link rel="stylesheet" th:href="@{/css/writeBoard.css}" />
 </head>
 <body>
  <th:block layout:fragment="content">
